# unesco-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/unesco_mcp/: __init__.py  config.py  indicator_db.py  server.py  uis_db.py
tests/: conftest.py  test_indicator_db.py  test_server.py  test_uis_db.py
