[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "unesco-mcp"
version = "0.0.1"
description = "Model Context Protocol (MCP) server for UNESCO UIS data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["mcp", "unesco", "uis", "api"]
authors = [
  { name = "Luca Picci" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=3.0.0",
    "unesco-reader>=3.1.1",
]

[project.scripts]
unesco-mcp = "unesco_mcp.server:main"

[project.urls]
Homepage = "https://github.com/lucapicci/unesco-mcp"
Repository = "https://github.com/lucapicci/unesco-mcp"
Issues = "https://github.com/lucapicci/unesco-mcp/issues"
Changelog = "https://github.com/lucapicci/unesco-mcp/blob/main/CHANGELOG.md"

[dependency-groups]
dev = ["pytest>=8.0", "pytest-mock>=3.14", "pytest-asyncio>=0.25", "pytest-cov>=6.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/unesco_mcp"]
